--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -22,3 +22,14 @@ services:
     depends_on:
       mysqlserver:
         condition: service_healthy
+  
+    angularapp:
+    container_name: angularapp
+    image: angularapp:v1
+    volumes:
+      - "./nginx.conf:/etc/nginx/conf.d/default.conf"
+    depends_on:
+      microcourse:
+        condition: service_healthy
+    ports:
+      - 80:80
